# plm-design-gui

./: License.lic  README.md  UPDATE_LOG.md  abc.test  experimentData.json  index.html  login.drawio  mqtt.sh  package.json  tailwind.config.cjs  test.js  vite.config.ts  vite.config.ts.timestamp-1726652451064-d7ee11f0c248c.mjs
public/: pdf.worker.min.js  splashscreen.html
scripts/: release.mjs  updatelog.mjs
src/: App.tsx  main.tsx  tailwind.css
src-tauri/: Cargo.toml  Config.ini  installer.wxs  libmyfirst_rust_dll.dylib  registry.wxs  solidworks_addIn.wxs  tauri.conf.json
src-tauri/lib/: lib.rs  libmyfirst_rust_dll.dylib
src-tauri/lib/NX_ADDIN/: OnChainNXInter.bat
src-tauri/lib/NX_ADDIN/startup/: OnChainPLM.men  OnChainPLM.rtb  OnChainPLM.tbr  OnChainPLMButton.men
src-tauri/lib/SolidWorks_ADDIN/: addInDll.bat
src-tauri/lib/ZW3D_ADDIN/: register.bat
src-tauri/lib/ZW3D_ADDIN/PLMDesinFusionRibbonUI/Resource/Settings/Default/ResourcePool/: Action.zcui  RibbonPage.zcui
src-tauri/lib/ZW3D_ADDIN/PLMDesinFusionRibbonUI/Resource/Settings/Default/Strategy/Environment-0-Top/: LayoutStrategy-4-Expert.zcui
src-tauri/lib/ZW3D_ADDIN/PLMDesinFusionRibbonUI/Resource/Settings/Default/Strategy/Environment-10-Part/: LayoutStrategy-4-Expert.zcui
src-tauri/lib/ZW3D_ADDIN/cachedData/steps/: 装配001.stp  零件001.stp  零件002.stp
src-tauri/src/: main.rs
src-tauri/src/app/: file.rs  menu.rs  mod.rs  solidworks.rs  window.rs
src-tauri/src/config/: conf.rs  mod.rs  utils.rs  windowicon.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: mod.rs  solidworks.rs
(+58 files in other folders)
