[package]
name = "DESIGNFUSION"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.66"
serde_json = "1.0"
regex = "1.7.0"
log = "0.4.17"
winit = "0.27"
reqwest = "0.11.13"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["reqwest-client", "api-all", "cli", "devtools", "system-tray", "windows7-compat"] }
libloading = "0.7"
tauri-plugin-deep-link = "0.1.1"
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
